--- a/STM32F103RBT6/STM32F103RBT6.ioc
+++ b/STM32F103RBT6/STM32F103RBT6.ioc
@@ -11,7 +11,8 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
-Mcu.IPNb=5
+Mcu.IP5=USART3
+Mcu.IPNb=6
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC3
@@ -52,8 +53,10 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PB10.Locked=true
+PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Locked=true
+PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=RED_LED
@@ -115,7 +118,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -126,6 +129,9 @@ RCC.TimSysFreq_Value=8000000
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=9
 TIM2.Prescaler=7999
+USART3.BaudRate=9600
+USART3.IPParameters=VirtualMode,BaudRate
+USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
