--- a/STM32F103RBT6/STM32F103RBT6.ioc
+++ b/STM32F103RBT6/STM32F103RBT6.ioc
@@ -11,8 +11,9 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
-Mcu.IP5=USART3
-Mcu.IPNb=6
+Mcu.IP5=TIM3
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC3
@@ -22,6 +23,7 @@ Mcu.Pin11=PB6
 Mcu.Pin12=PB7
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC5
 Mcu.Pin3=PB2
 Mcu.Pin4=PB10
@@ -30,7 +32,7 @@ Mcu.Pin6=PC6
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14
 Mcu.Pin9=PD2
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -63,10 +65,8 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=RED_LED
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=BUZZER
 PB5.Locked=true
-PB5.Signal=GPIO_Output
+PB5.Signal=S_TIM3_CH2
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -119,7 +119,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -127,9 +127,16 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMC
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
+SH.S_TIM3_CH2.0=TIM3_CH2,Output Compare2 CH2
+SH.S_TIM3_CH2.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=9
 TIM2.Prescaler=7999
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=AutoReloadPreload,Prescaler,Period,Channel-Output Compare2 CH2
+TIM3.Period=999
+TIM3.Prescaler=63
 USART3.BaudRate=9600
 USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
@@ -137,5 +144,7 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
